--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "license": "BSD-3-Clause",
   "description": "",
   "dependencies": {
+    "autoprefixer": "^7.2.5",
     "electron": "^1.8.2",
     "get-port": "^3.2.0",
     "itk": "^7.1.0",
-    "paraview-glance": "^1.1.4",
+    "paraview-glance": "^1.1.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "vtk.js": "^5.15.22"
