--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "paraview-glance": "^1.1.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "vtk.js": "^5.15.22"
+    "vtk.js": "^5.15.22",
+    "wslink": "file:./Dependencies/wslink/js"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.3.1",
